--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,3 +21,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.dependencies]
 python = "^3.13"
+
+[tool.poetry.group.dev.dependencies]
+pytest-django = "^4.11.1"
+
