--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "pytest (>=8.4.1,<9.0.0)",
     "factory-boy (>=3.3.3,<4.0.0)",
     "django (>=5.2.4,<6.0.0)",
-    "djangorestframework (>=3.16.0,<4.0.0)"
+    "djangorestframework (>=3.16.0,<4.0.0)",
+    "django-extensions (>=4.1,<5.0)"
 ]
 
 
