feat: adiciona configuração Docker Compose com serviços de backend e banco

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,29 +1,26 @@
-[project]
-name = "ebac-m13-bookstore"
+[tool.poetry]
+name = "ebac_m13_bookstore"
 version = "0.1.0"
 description = "BookStore API"
-authors = [
-    {name = "jrjunior72",email = "jrjunior72@hotmail.com"}
-]
+authors = ["jrjunior72 <jrjunior72@hotmail.com>"]
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = [
-    "pytest (>=8.4.1,<9.0.0)",
-    "factory-boy (>=3.3.3,<4.0.0)",
-    "django (>=5.2.4,<6.0.0)",
-    "djangorestframework (>=3.16.0,<4.0.0)",
-    "django-extensions (>=4.1,<5.0)",
-    "django-debug-toolbar (>=6.0.0,<7.0.0)"
-]
+packages = [{ include = "ebac_m13_bookstore" }]
 
+[tool.poetry.dependencies]
+python = "^3.13"
+pytest = ">=8.4.1,<9.0.0"
+factory-boy = ">=3.3.3,<4.0.0"
+django = ">=5.2.4,<6.0.0"
+djangorestframework = ">=3.16.0,<4.0.0"
+django-extensions = ">=4.1,<5.0"
+django-debug-toolbar = ">=6.0.0,<7.0.0"
+psycopg2-binary = "^2.9.10"
+
+[tool.poetry.group.dev.dependencies]
+pytest-django = "^4.11.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.poetry.dependencies]
-python = "^3.13"
-
-[tool.poetry.group.dev.dependencies]
-pytest-django = "^4.11.1"
 
