--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - "8000:8000" 
     env_file: 
       - ./env.dev 
+    networks: 
+      - backend
     depends_on: 
       db:
         condition: service_healthy
@@ -27,6 +29,12 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+    networks:
+      - backend
+
+networks:
+  backend:
+    driver: bridge
 
 volumes: 
   postgres_data: 
