--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,42 +1,28 @@
 #version: '3.9' 
 
 services: 
-  back: 
-    build: . 
-    command: python manage.py runserver 0.0.0.0:8000 
-    volumes: 
-      - .:/usr/src/app/ 
-    ports: 
-      - "8000:8000" 
-    env_file: 
-      - ./env.dev 
-    networks: 
-      - backend
-    # depends_on: 
-    #   db:
-    #     condition: service_healthy
-    depends_on: 
-      - db
-
   db: 
     image: postgres:14 
-    environment: 
-      - POSTGRES_DB=ebac_m13_bookstore_db 
-      - POSTGRES_USER=dev 
-      - POSTGRES_PASSWORD=dev 
+    ports:
+      - 5432:5432
     volumes: 
       - postgres_data:/var/lib/postgresql/data/ 
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U dev -d ebac_m13_bookstore_db || exit 0"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
-    networks:
-      - backend
+    environment: 
+      - POSTGRES_DB=ebac_m13_bookstore_db 
+      - POSTGRES_USER=bookstore_dev 
+      - POSTGRES_PASSWORD=bookstore_dev
 
-networks:
-  backend:
-    driver: bridge
+  web:
+    build: .
+    command: python manage.py runserver 0.0.0.0:8000
+    volumes:
+      - . :/usr/src/app/
+    ports:
+      - 8000:8000
+    env_file:
+      - ./env.dev
+    depends_on:
+      - db
 
 volumes: 
   postgres_data: 
