feat: ajuste no buil.yml para testes funcionarem no CI #6

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,5 +32,8 @@ jobs:
       run: python -m poetry install
 
     - name: Test
+      env:
+        DJANGO_ALLOWED_HOSTS: "localhost 127.0.0.1"  # Adicione hosts permitidos
+        SECRET_KEY: "django-insecure-(s3)mafduuulko!^_5-pz+9xlql^a-b7q*$r=9q$o2-ugz(c9k"
       run: |
         poetry run python manage.py test
