feat: test code review automation #3

--- a/.github/workflows/workflow-pr.yml
+++ b/.github/workflows/workflow-pr.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Test
         run: |
           poetry run python manage.py test
-      - nane: Wemake Python Stylguide
+      - name: Wemake Python Stylguide
         uses: Wemake-services/wemake-python-styleguide@0.16.0
         continue—on—error: true
         with:
