--- a/.github/workflows/workflow-pr.yml
+++ b/.github/workflows/workflow-pr.yml
@@ -20,19 +20,19 @@ jobs:
           POETRY_VIRTUALENVS_CREATE: false
 
 
-      - name: View poetry —help
-        run: poetry —help
+      - name: View poetry -help
+        run: poetry -help
 
       - name: Install dependencies
         shell: bash
-        run: python —m poetry install
+        run: python -m poetry install
       
       - name: Test
         run: |
           poetry run python manage.py test
       - name: Wemake Python Stylguide
         uses: Wemake-services/wemake-python-styleguide@0.16.0
-        continue—on—error: true
+        continue-on-error: true
         with:
           reporter:'githug-pr-review'
         env:
